--- a/src/scss/mixins/_generate-text-aligns.scss
+++ b/src/scss/mixins/_generate-text-aligns.scss
@@ -3,5 +3,10 @@
         .text-#{$key} {
             text-align: $value;
         }
+        .text-#{var(column-postfix-desktop)}-#{$key} {   //text-lg-left
+            @include desktop-up {
+                text-align: $value;
+            }
+        }
     }
 };
