--- a/src/scss/mixins/_mixins.scss
+++ b/src/scss/mixins/_mixins.scss
@@ -8,3 +8,4 @@
 @import "generate-text-aligns";
 @import "generate-font-weights";
 @import "generate-display-classes";
+@import "generate-flex-direction";
