--- a/src/scss/variables/_colors.scss
+++ b/src/scss/variables/_colors.scss
@@ -1,6 +1,7 @@
 $colors: (
     base: (
         "white": #FFFFFF,
+        "light":  #f8f9fa,
         "gray": #c0c0c0,
         "muted": #6c757d,
         "darkGray": #343a40,
