--- a/src/scss/variables/_config.scss
+++ b/src/scss/variables/_config.scss
@@ -48,4 +48,10 @@ $config: (
             4: 3.5rem,
         ),
     ),
+    flex: (
+        direction: (
+            row: row,
+            column: column,
+        ),
+    ),
 );
