--- a/src/scss/_multkori.scss
+++ b/src/scss/_multkori.scss
@@ -103,15 +103,53 @@ main {
 .span, .card-text {
     font-family: 'Mulish', Helvetica, Arial, sans-serif;
 }
-.button {
+
+
+
+.btn {
     border-radius: 100px;
     transition: all .3s ease;
     font-family: 'Lato', Helvetica, Arial, sans-serif;
     text-transform: uppercase;
     font-size: 1rem;
+    cursor: pointer;
+    display: inline-block;
+    font-weight: 400;
+    text-align: center;
+    vertical-align: middle;
+    user-select: none;
+    background-color: transparent;
+    border: 1px solid transparent;
 
     &:hover {
         background-color: var(base-yellow, $colors);
         border-color: var(base-yellow, $colors);
     }
+
+    &-outline-light {
+        color: #f8f9fa;
+        border-color: #f8f9fa;
+    }
+
+    &-lg {
+        line-height: 1.5;
+    }
+}
+
+
+.row {
+    display: flex;
+    flex-wrap: wrap;
+    margin-right: -15px;
+    margin-left: -15px;
+}
+
+.d-flex {
+    display: flex;
+}
+.justify-content-center {
+    justify-content: center;
+}
+.align-items-center {
+    align-items: center;
 }
