--- a/src/scss/_navbar.scss
+++ b/src/scss/_navbar.scss
@@ -28,6 +28,14 @@
         justify-content: center;
         align-items: center;
 
+        display: inline-block;
+        padding-top: .3125rem;
+        padding-bottom: .3125rem;
+        margin-right: 1rem;
+        font-size: 1.25rem;
+        line-height: inherit;
+        white-space: nowrap;
+
         &:hover {
             color: var(base-white, $colors);
         }
@@ -39,7 +47,6 @@
         list-style: none;
         margin: 0;
         padding: 0;
-        width: 100%;
 
         @media screen and (min-width: var(grid-breakpoint-desktop)) {
             display: flex;
@@ -80,9 +87,11 @@
             cursor: pointer;
             display: flex;
             flex-wrap: wrap;
-            height: 1.5rem;
-            padding: 0.75rem;
-            width: 1.5rem;
+            height: 1rem;
+            padding: .5rem 1rem;
+            width: 1rem;
+            border: 1px solid var(base-gray, $colors);
+            border-radius: .25rem; 
         
             @media screen and (min-width: var(grid-breakpoint-desktop)) {
                 display: none;
@@ -93,7 +102,26 @@
             background: var(nav-linkColor, $colors);
             display: block;
             height: 2px;
-            width: 1.5rem;
+            width: 1.2rem;
+            box-sizing: content-box;
+        }
+    }
+
+    &__bottom {
+        display: flex;
+        justify-content: space-between;
+        flex-wrap: wrap;
+        list-style: none;
+        padding: 0;
+        justify-content: space-between;
+        
+        &--link {
+            text-decoration: none;
+            color: var(base-muted, $colors);
+            
+            &:hover {
+                color: var(base-yellow, $colors);
+            }
         }
     }
 }
