--- a/src/scss/mixins/_breakpoint.scss
+++ b/src/scss/mixins/_breakpoint.scss
@@ -1,5 +1,5 @@
 @mixin desktop-up {
-    @media only screen and (min-width: var(grid-breakpoint-desktop)) {
+    @media screen and (min-width: var(grid-breakpoint-desktop)) {
         @content;
     }
 };
