--- a/src/scss/mixins/_mixins.scss
+++ b/src/scss/mixins/_mixins.scss
@@ -9,3 +9,4 @@
 @import "generate-font-weights";
 @import "generate-display-classes";
 @import "generate-flex-direction";
+@import "generate-heading-tags";
