--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -6,11 +6,12 @@
 @include column-default-style();
 @include generate-columns();
 @include generate-colored-backgrounds(map-get($colors, base));
-@include generate-spacing(padding);
-@include generate-spacing(margin);
 @include generate-colored-texts();
 @include generate-text-aligns();
 @include generate-font-weights();
+@include generate-spacing(padding);
+@include generate-spacing(margin);
+@include generate-heading-tags();
 @include generate-display-classes();
 @include generate-flex-direction();
 
